--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="added">已添加</string>
     <string name="deleted">已删除</string>
 
+    <string name="about_app">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;速通交易APP是一款电子行业沟通信息平台，专注服务于液晶显示屏、整机、内置配件耗材及维修设备工厂、生产商、贸易商、华强北数万家档口以及全国电子行业商户需求，解决QQ、微信群人数的限制。\n\n
+    &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;下载速通交易APP，把您的产品或者需求发布出来，才能被更多同行看到、才能让有需求有需要的客户找到你的优势货源、加入速通交易让您的产品销售到全国各个地区、加入速通让您可以随时掌握通讯行业最新的动态，让您能认识到全国各地的同行好友</string>
+
     <string name="original_password">原密码不能为空</string>
     <string name="new_password_not_null">新密码不能为空</string>
     <string name="confirm_password_not_null">确认密码不能为空</string>
