--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="permission_request_denied">需要相应的权限</string>
+
+    <!-- 分享 -->
+    <string name="errcode_success">发送成功</string>
+    <string name="errcode_cancel">发送取消</string>
+    <string name="errcode_deny">发送被拒绝</string>
+    <string name="errcode_unknown">其他原因导致发送不成功！</string>
 </resources>
