修改视频播放方案

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">fix_phone</string>
+    <string name="app_name">速通交易</string>
 
     <string name="agree">接&#160;&#160;&#160;受</string>
     <string name="request">已请求</string>
